# navigator

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs-check.yml  docs.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: chaining.md  configuration.md  file-watching.md  namespaces.md  scheduling.md  secrets.md  systemd.md
docs/reference/: cli.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/chaining/: index.html
guides/configuration/: index.html
guides/file-watching/: index.html
guides/namespaces/: index.html
guides/scheduling/: index.html
guides/secrets/: index.html
guides/systemd/: index.html
reference/cli/: index.html
search/: search_index.json
src/navigator/: __init__.py  __main__.py  _click_bridge.py  chainer.py  cli.py  config.py  db.py  doctor.py  execution_logger.py  executor.py  models.py  (+7 more)
tests/: conftest.py  test_chainer.py  test_cli.py  test_config.py  test_db.py  test_doctor.py  test_execution_logger.py  test_executor.py  test_models.py  test_namespace.py  test_output.py  test_scheduler.py  test_secrets.py  test_service.py  test_watcher.py  test_watcher_handler.py
(+117 files in other folders)
