[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "navigator"
version = "0.1.0"
description = "Autonomous task orchestrator for Claude Code sessions"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.24.0",
    "platformdirs>=4.0",
    "pydantic>=2.12",
    "tomli-w>=1.0",
    "rich>=14.0",
    "python-dotenv>=1.2",
]

[project.scripts]
navigator = "navigator.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/navigator"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]
